saveInvertedIndex time improvement